--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,13 +1,9 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation" style="background-color: #f5ebe1;">
-  <div class="flex-l justify-between items-center center">
-    <!-- <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-black no-underline black-90 dib">
-      {{ with .Site.Params.site_logo }}
-        <img src="{{ relURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
-      {{ else }}
-        {{ .Site.Title }}
-      {{ end }}
-    </a> -->
-    <div class="flex-l items-center">
+  <div class="flex justify-between items-center center">
+    <div class="flex items-center">
+      <a href="{{ .Site.Home.RelPermalink }}" class="ph3">
+        <img src="/images/logo_red.png" alt="Logo" style="height: 40px; width: auto;">
+      </a>
       {{ partial "i18nlist.html" . }}
       {{ if .Site.Menus.main }}
         <ul class="{{ cond (eq $.Site.Language.LanguageDirection "rtl") "pr0 ml3" "pl0 mr3" }}">
