--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,7 +1,7 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation" style="background-color: #f5ebe1;">
   <div class="flex justify-between items-center center">
     <div class="flex items-center">
-      <a href="{{ .Site.Home.RelPermalink }}" class="ph3">
+      <a href="{{ .Site.Home.RelPermalink }}" class="pr3">
         <img src="/images/logo_red.png" alt="Logo" style="height: 40px; width: auto;">
       </a>
       {{ partial "i18nlist.html" . }}
